Segunda version del proyecto

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
        <h1>DESCARGA DE FICHEROS</h1>
+       <h2>VERSION 2.0</h2>
 	<fieldset>
 		<legend>Datos de usuario </legend>
 		<form name="descarga" action="descargas.php" method="post" enctype="multipart/form-data">				    	   
